<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:background="@color/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:background="@color/bg"
            android:layout_centerInParent="true">

        </ProgressBar>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_search_bar"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:elevation="@dimen/small">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/search_bar"
                    android:background="@color/bg2">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="@dimen/medium"
                        app:cardCornerRadius="@dimen/medium">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/et_search"
                            android:fontFamily="@font/roboto_regular"
                            android:hint="@string/search_city"
                            android:textColorHint="#BDE0FE"
                            android:drawableStart="@drawable/baseline_search_24"
                            android:drawablePadding="@dimen/medium"
                            android:imeOptions="actionSearch"
                            android:inputType="text"
                            android:paddingStart="@dimen/medium"
                            android:paddingEnd="@dimen/medium"
                            android:drawableTint="@color/textsb"
                            android:textColor="@color/textsb"
                            android:background="@color/bgsb"
                            android:autofillHints="name">

                        </EditText>


                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/cv_search_bar"
                android:id="@+id/rl_main"
                android:background="@color/bg">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/medium"
                        android:layout_marginTop="@dimen/medium"
                        android:layout_marginEnd="@dimen/medium"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/city"
                            android:textColor="@color/text"
                            android:textSize="@dimen/medium_text">

                        </TextView>

                        <TextView
                            android:id="@+id/tv_quote"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/quote"
                            android:textColor="@color/text"
                            android:textSize="@dimen/large_text">

                        </TextView>

                        <TextView
                            android:id="@+id/tv_date_and_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/temp_date_and_time"
                            android:textColor="@color/text"
                            android:textSize="@dimen/small_text">

                        </TextView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/medium"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_min_temp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/xlarge"
                                android:layout_weight="1"
                                android:fontFamily="@font/roboto_regular"
                                android:text="@string/temp_min"
                                android:textColor="@color/text"
                                android:textSize="@dimen/small_text">

                            </TextView>

                            <TextView
                                android:id="@+id/tv_max_temp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/xlarge"
                                android:layout_weight="1"
                                android:fontFamily="@font/roboto_regular"
                                android:text="@string/temp_max"
                                android:textColor="@color/text"
                                android:textSize="@dimen/small_text">

                            </TextView>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/medium"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_temp"
                                android:layout_width="@dimen/xsmall"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/roboto_medium"
                                android:text="@string/temp"
                                android:textColor="@color/text"
                                android:textAlignment="center"
                                android:textSize="@dimen/xlarge_text">

                            </TextView>

                            <TextView
                                android:id="@+id/tv_emoji"
                                android:layout_width="@dimen/xsmall"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:text="@string/cool"
                                android:textAlignment="center"
                                android:textSize="@dimen/xlarge_text">

                            </TextView>


                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_weather_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/medium"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/cool_weather"
                            android:textAlignment="center"
                            android:textColor="@color/text"
                            android:textSize="26sp">

                        </TextView>

                    </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/large"
                    android:layout_marginEnd="@dimen/large"
                    android:layout_marginTop="@dimen/medium"
                    android:layout_marginBottom="55dp"
                    android:elevation="@dimen/xsmall"
                    app:cardCornerRadius="@dimen/medium"
                    app:cardMaxElevation="@dimen/xsmall"
                    app:cardElevation="@dimen/xsmall">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@color/bg2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_wind"
                        android:text="@string/wind"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/text"
                        android:textSize="@dimen/medium_text"
                        android:layout_marginTop="@dimen/medium"
                        android:layout_marginBottom="@dimen/xsmall"
                        android:layout_marginStart="@dimen/small"
                        android:layout_marginEnd="@dimen/small">

                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_rain"
                        android:text="@string/rain"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/text"
                        android:textSize="@dimen/medium_text"
                        android:layout_marginBottom="@dimen/xsmall"
                        android:layout_marginStart="@dimen/small"
                        android:layout_marginEnd="@dimen/small">

                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_pressure"
                        android:text="@string/pressure"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/text"
                        android:textSize="@dimen/medium_text"
                        android:layout_marginBottom="@dimen/medium"
                        android:layout_marginStart="@dimen/small"
                        android:layout_marginEnd="@dimen/small">

                    </TextView>


                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>
</layout>
